sort.basic.cocktail.AlgCocktailSort3.scala.error
Compilation error:
AlgCocktailSort3:6: error: '(' expected but identifier found.
  for i <- beg to end{
      ^AlgCocktailSort3:17: error: '(' expected but identifier found.
  for i <- end to beg by -1{
      ^AlgCocktailSort3:28: error: illegal start of simple expression
} 
^